<resources>
    <string name="app_name">MyMunicipality</string>
    <string name="app_access">MyMunicipality</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reminder_registrazione">Sign up</string>
    <string name="Logout">Logout</string>
    <string name="Welcome">Benvenuto su MyMunicipality</string>
    <string name="Welcome2">Utilizza i riquadri qui sotto per prenotare un appuntamento, inoltrare una segnalazione o accedere all\'area personale</string>
    <string name="Segnalazioni">Segnalazioni</string>
    <string name="Appuntamenti">Appuntamenti</string>
    <string name="Areapersonale">Area personale</string>
    <string name="facebook_app_id">281417126535483</string>
    <string name="fb_login_protocol_scheme">fb281417126535483</string>
    <string name="Registrazione">Registrati ora a MyMunicipality</string>
    <string name="Registrati">Registrati</string>
    <string name="PersonalData">Dati personali</string>
    <string name="Carica">Carica immagine</string>
    <string name="Successivo">Successivo</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="Via">Via</string>
    <string name="Datadinascita">Data di nascita</string>
    <string name="ButtonGoogleLogout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RipetiPassword">Ripeti password</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="Or">oppure</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="personalArea">Area Personale</string>
    <string name="seiLoggatocome">Sei loggato come:</string>
    <string name="Email">Email</string>
    <string name="Cellulare">Cellulare</string>
    <string name="Viadiresidenza">Via/Piazza</string>
    <string name="Modifica">Modifica Informazioni</string>
    <string name="salva_modifiche">Salva Modifiche</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="via_piazza">Via/Piazza</string>
    <string name="utente">Utente</string>
    <string name="priorita">Priorità</string>
    <string name="descrizione">Descrizione</string>
    <string name="modifica_datipersonali">Modifica Dati Personali</string>
    <string name="settore">Settore</string>
    <string name="data">Data</string>
    <string name="data_e_ora">Data e Ora</string>
    <string name="inserire_un_settore">Inserire un Settore</string>
    <string name="scegliere_la_data">Scegliere la Data</string>
    <string name="scegliere_l_ora">Scegliere l\'ora</string>
    <string name="richiedi_prenotazione">Richiedi Prenotazione</string>
    <string name="oggetto_del_colloquio">Oggetto del Colloquio</string>
    <string name="ufficio">Ufficio</string>
    <string name="luogo">Luogo</string>
    <string name="aggiungi_al_calendario">Aggiungi al calendario</string>
    <string name="title_activity_maps">Map</string>
    <string name="save_date">Save date</string>
    <string name="inserire_l_oggetto_della_segnalazione">Inserire l\'oggetto della segnalazione</string>
    <string name="oggetto">Oggetto</string>
    <string name="inserire_il_luogo">Inserire il luogo</string>
    <string name="breve_descrizione">Breve descrizione</string>
    <string name="aggiungi_foto">Aggiungi Foto</string>
    <string name="calendarizza">calendarizza</string>
    <string name="inserire_nuovo_cellulare">Inserire nuovo Cellulare</string>
    <string name="inserire_nuova_data_di_nascita">Inserire nuova Data di Nascita</string>
    <string name="inserire_nuova_via">Inserire nuova Via</string>
    <string name="my_municipality">My Municipality</string>
    <string name="benvenuto">Benvenuto</string>
    />

</resources>
