<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditPersonalDataActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/new_report_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserire_nuovo_cellulare"
        android:textStyle="italic|bold"
        android:textSize="18sp"
        android:textColor="#800000"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/change_cellulare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Cellulare"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserire_nuova_data_di_nascita"
        android:textStyle="italic|bold"
        android:textSize="18sp"
        android:textColor="#800000"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/change_datanascita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Datadinascita"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserire_nuova_via"
        android:textStyle="italic|bold"
        android:textSize="18sp"
        android:textColor="#800000"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/change_via"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Via"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salva_modifiche"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        />

</LinearLayout>