<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Register2Activity"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.google.android.material.textview.MaterialTextView
        android:layout_height="wrap_content"
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:text="@string/PersonalData"
        android:gravity="start"
        android:textStyle="bold|italic"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_gravity="center"
        android:layout_width="127dp"
        android:layout_height="145dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/uploadbutton"
        android:layout_gravity="center"
        android:text="@string/Carica"
        android:layout_marginTop="10dp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nome"
        android:layout_marginTop="60dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Cognome">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Datadinascita" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Via">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/Registrati">
    </com.google.android.material.button.MaterialButton>


</LinearLayout>
</ScrollView>