<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.google.android.material.textview.MaterialTextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Registrazione"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:layout_marginTop="80dp"
        android:textSize="20sp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_gravity="center"
        android:layout_width="127dp"
        android:layout_height="145dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/stemmafano"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/Successivo">
    </com.google.android.material.button.MaterialButton>
</LinearLayout>