<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewReportActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp" />


<com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/inserire_un_settore"
    android:textStyle="bold"
    android:textSize="20sp"
    android:textColor="#000000"
    android:gravity="center"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="15dp"
    />

    <Spinner
        android:id="@+id/sector_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sector_spinner"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scegliere_la_data"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/appointment_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/data"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scegliere_l_ora"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        />

    <TimePicker
        android:id="@+id/appointment_clock"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        />



</LinearLayout>