<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appointment_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.Toolbar.Primary">
        </com.google.android.material.appbar.MaterialToolbar>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sector_text"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            android:layout_width="match_parent"
            android:textColor="#7b1b02"
            android:layout_height="wrap_content"
            android:text="@string/ufficio"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sector_text_camp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/object_text"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            android:layout_width="match_parent"
            android:textColor="#7b1b02"
            android:layout_height="wrap_content"
            android:text="@string/oggetto_del_colloquio"
            android:layout_marginTop="20dp"
            />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/object_text_camp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />




        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dataora_text"
            android:layout_width="match_parent"
            android:textStyle="italic|bold"
            android:gravity="center"
            android:textColor="#7b1b02"
            android:textSize="18sp"
            android:text="@string/data_e_ora"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dataora_text_camp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/via_text"
            android:layout_width="match_parent"
            android:textStyle="italic|bold"
            android:gravity="center"
            android:textColor="#7b1b02"
            android:textSize="18sp"
            android:text="@string/luogo"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/via_text_camp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"

            />


    </LinearLayout>
</ScrollView>